--- a/vignettes/overview_slides.Rmd
+++ b/vignettes/overview_slides.Rmd
@@ -256,11 +256,6 @@ example_dataframe <- as.data.frame(example_matrix)
 
 The flags in this `data.frame` are explained in `?example_matrix`. 
 
-For now, we need to understand that `trt` is a flag denoting receipt of the
-experimental treatment (`trt = 1L`) or the control therapy (`trt = 0L`).
-`ext` is a flag for external data status, `1L` for external data or `0L` for
-the internal trial.
-
 ```{r}
 table(
   trt = example_matrix[, "trt"],
@@ -285,7 +280,7 @@ km_fit <- survfit(Surv(time = time, event = 1 - cnsr) ~ trt, example_dataframe,
 )
 ggsurvplot(fit = km_fit, data = example_dataframe)
 ```
-
+<br>
 <center>
 ```{r message = FALSE, echo = FALSE}
 library(broom)
@@ -325,7 +320,7 @@ tidy(exp_fit, conf.int = TRUE, transform = "coefs.exp") %>%
 ```
 
 </center>
-
+<br>
 Here, the hazard ratio is very similar to the Cox proportional hazards 
 model: 0.88 (95% CI 0.62 - 1.25).
 
@@ -385,9 +380,7 @@ gt(
 
 ##
 
-Let's create an exponential survival
-distribution with the constructor `exp_surv_dist()`. Note there are three
-arguments:
+There are three arguments to `exp_surv_dist()`:
 
 ```{r eval = FALSE}
 exp_surv_dist(time_var,
@@ -463,8 +456,6 @@ exp_outcome <- exp_surv_dist(
 
 ##
 
-Let's print the object to get a summary of our outcome distribution:
-
 ```{r}
 exp_outcome
 ```
@@ -512,8 +503,6 @@ bdb_borrowing <- borrowing_details(
 
 ##
 
-Let's print the object to get a summary of our borrowing details:
-
 ```{r}
 bdb_borrowing
 ```
@@ -549,8 +538,6 @@ trt_details <- treatment_details(
 
 ##
 
-Let's print the object to get a summary of our treatment details:
-
 ```{r}
 trt_details
 ```
@@ -569,8 +556,6 @@ analysis_object <- create_analysis_obj(
 ```
 
 ##
-
-Let's print the `Analysis` object:
 
 ```{r}
 analysis_object
@@ -661,6 +646,7 @@ ggsurvplot(
 ## Evaluating balance between cohorts
 
 Maybe our cohorts are imbalanced:
+<br>
 <center>
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 library(table1)
@@ -672,10 +658,6 @@ data = example_dataframe
 t1
 ```
 </center>
-
-<br>
-
-Indeed, it looks like there may be some imbalance.
 
 ##
 
@@ -694,8 +676,8 @@ ps_model
 
 ##
 
-We'll then incorporate the propensity scores back into our example `data.frame`
-and create propensity score quartiles for which we'll adjust.
+We'll make a new matrix called `example_matrix_ps` which has 5 categories of
+propensity score values with approximately the same number in each.
 ```{r include = FALSE}
 ps <- predict(ps_model, type = "response")
 example_dataframe$ps <- ps
@@ -795,6 +777,8 @@ summarize_draws(draws_ps, ~ quantile(.x, probs = c(0.025, 0.50, 0.975))) %>%
 
 ##
 
+The histogram of MCMC samples confirms this as well:
+
 ```{r echo = FALSE, message = FALSE, warning = FALSE, fig.dim = c(6, 4), fig.align='center'}
 mcmc_hist(draws_ps, c("treatment HR")) + 
   geom_vline(aes(xintercept = 1.0), linetype = 2)
@@ -839,9 +823,7 @@ details.
 
 To fill in `create_simulation_obj()`, the first argument we need to fill in
 is `data_matrix_list`. This argument requires a special `psborrow2`
-data matrix list created by the function `sim_data_list`.
-
-The key inputs to `sim_data_list` are:
+data matrix list created by the function `sim_data_list()`.
 
 ```{r eval = FALSE}
 sim_data_list(
@@ -853,7 +835,7 @@ sim_data_list(
 )
 ```
 
-The first of these is a list of lists of matrices. At the highest level,
+The first argument is a list of lists of matrices. At the highest level,
 we'll index different data generation parameters. At the lowest level,
 we'll index different matrices generated with these parameters.
 
@@ -913,12 +895,12 @@ NROW(my_data_list[[1]])
 ```
 
 ```{r}
-my_data_list[[1]][[1]][1, ]
+head(my_data_list[[1]][[1]])
 ```
 
 ## Data generation guide
 
-For this data, we need to create a `guide` that explains
+We also need to create a `guide` that explains
 how the data were generated. In this example, here are the four
 scenarios:
 
@@ -936,6 +918,9 @@ my_sim_data_guide$id <- seq(1, NROW(my_sim_data_guide))
 ```{r}
 my_sim_data_guide
 ```
+
+This guide implies that `my_sim_data_guide[[1]]` is a list of 
+matrices where the treatment HR was 0.6 and the drift HR was 1.0.
 
 ##
 
@@ -1134,3 +1119,9 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
   ) +
   scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
 ```
+
+# Questions?
+
+## Thank you!
+
+Thank you! Any questions?
